[gd_scene load_steps=10 format=3 uid="uid://kl028ek3jm6x"]

[ext_resource type="Theme" uid="uid://4he80n7v8sdk" path="res://ui/screens/startup/theming/screen_startup_theme.tres" id="1_o5j6d"]
[ext_resource type="Script" path="res://ui/screens/startup/tabs/main/tab_main.gd" id="2_rkr2y"]
[ext_resource type="LabelSettings" uid="uid://bhb4yqus1rclg" path="res://ui/screens/startup/theming/startup_label_title.tres" id="3_rni0n"]
[ext_resource type="Texture2D" uid="uid://b2lbweyckvws7" path="res://assets/icons/folder_open.png" id="4_1e87m"]
[ext_resource type="Texture2D" uid="uid://cpulbvif037ec" path="res://assets/icons/note_add.png" id="5_ypyak"]
[ext_resource type="Texture2D" uid="uid://bpjbmo5en5ak5" path="res://assets/icons/baseline_link_black_48dp.png" id="6_tokwa"]
[ext_resource type="Script" path="res://scripts/classes/button_open_link.gd" id="7_1tvnq"]
[ext_resource type="Texture2D" uid="uid://cnt381ylae2gq" path="res://assets/icons/support.png" id="8_ckpqh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f7vt4"]

[node name="MainTab" type="MarginContainer"]
theme = ExtResource("1_o5j6d")
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 14
script = ExtResource("2_rkr2y")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 14

[node name="LeftVBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 7

[node name="RecentProjectsLabel" type="Label" parent="HBox/LeftVBox"]
layout_mode = 2
text = "TITLE_RECENT_PROJECTS"
label_settings = ExtResource("3_rni0n")

[node name="RecentProjectsVBox" type="VBoxContainer" parent="HBox/LeftVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 7

[node name="Spacer1" type="HSeparator" parent="HBox/LeftVBox/RecentProjectsVBox"]
layout_mode = 2

[node name="ShowAllProjectsButton" type="Button" parent="HBox/LeftVBox/RecentProjectsVBox"]
layout_mode = 2
tooltip_text = "TOOLTIP_BUTTON_SHOW_ALL_PROJECTS"
text = "BUTTON_SHOW_ALL_PROJECTS"
icon = ExtResource("4_1e87m")
alignment = 0

[node name="Spacer2" type="HSeparator" parent="HBox/LeftVBox/RecentProjectsVBox"]
layout_mode = 2

[node name="OpenProjectButton" type="Button" parent="HBox/LeftVBox"]
layout_mode = 2
tooltip_text = "TOOLTIP_BUTTON_OPEN_PROJECT"
text = "BUTTON_OPEN_PROJECT"
icon = ExtResource("4_1e87m")
alignment = 0

[node name="CreateProjectButton" type="Button" parent="HBox/LeftVBox"]
layout_mode = 2
tooltip_text = "TOOLTIP_BUTTON_CREATE_PROJECT"
text = "BUTTON_CREATE_PROJECT"
icon = ExtResource("5_ypyak")
alignment = 0

[node name="RightVBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 7

[node name="GettingStartedLabel" type="Label" parent="HBox/RightVBox"]
layout_mode = 2
text = "TITLE_GETTING_STARTED"
label_settings = ExtResource("3_rni0n")

[node name="Spacer1" type="HSeparator" parent="HBox/RightVBox"]
layout_mode = 2

[node name="ManualButton" type="Button" parent="HBox/RightVBox"]
layout_mode = 2
tooltip_text = "TOOLTIP_BUTTON_MANUAL"
text = "BUTTON_MANUAL"
icon = ExtResource("6_tokwa")
alignment = 0
script = ExtResource("7_1tvnq")
link = "manual_page"

[node name="TutorialsButton" type="Button" parent="HBox/RightVBox"]
layout_mode = 2
tooltip_text = "TOOLTIP_BUTTON_TUTORIALS"
text = "BUTTON_TUTORIALS"
icon = ExtResource("6_tokwa")
alignment = 0
script = ExtResource("7_1tvnq")
link = "tutorials_page"

[node name="SupportButton" type="Button" parent="HBox/RightVBox"]
layout_mode = 2
tooltip_text = "TOOLTIP_BUTTON_SUPPORT"
text = "BUTTON_SUPPORT"
icon = ExtResource("6_tokwa")
alignment = 0
script = ExtResource("7_1tvnq")
link = "support_page"

[node name="DiscordButton" type="Button" parent="HBox/RightVBox"]
layout_mode = 2
tooltip_text = "TOOLTIP_BUTTON_DISCORD"
text = "BUTTON_DISCORD"
icon = ExtResource("6_tokwa")
alignment = 0
script = ExtResource("7_1tvnq")
link = "discord"

[node name="Spacer2" type="HSeparator" parent="HBox/RightVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_f7vt4")

[node name="SupportProjectButton" type="Button" parent="HBox/RightVBox"]
layout_mode = 2
tooltip_text = "TOOLTIP_BUTTON_SUPPORT_PROJECT"
text = "BUTTON_SUPPORT_PROJECT"
icon = ExtResource("8_ckpqh")
alignment = 0
script = ExtResource("7_1tvnq")
link = "kofi_page"

[connection signal="pressed" from="HBox/LeftVBox/RecentProjectsVBox/ShowAllProjectsButton" to="." method="_on_show_all_projects_button_pressed"]
[connection signal="pressed" from="HBox/LeftVBox/OpenProjectButton" to="." method="_on_open_project_button_pressed"]
[connection signal="pressed" from="HBox/LeftVBox/CreateProjectButton" to="." method="_on_create_project_button_pressed"]
